<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.servotech.ServoTechGetStarted">

    <ImageView
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:src="@drawable/banner" />

    <TextView
        android:paddingLeft="16dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:text="About Us"/>

    <TextView
        android:paddingLeft="16dp"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:layout_width="match_parent"
        android:text="Mission Statement"/>

    <TextView
        android:paddingLeft="16dp"
        android:layout_weight="0.50"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text="@string/aboutUs"/>

    <ImageView
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:src="@drawable/banner" />

    <TextView
        android:paddingLeft="16dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:text="What We Offer"/>

    <TextView
        android:paddingLeft="16dp"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text="@string/whatWeOffer"/>

    <TextView
        android:paddingLeft="16dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:text="Why Use Our Services"/>

    <TextView
        android:paddingLeft="16dp"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text="@string/whyUseOurServices"/>

    <TextView
        android:paddingLeft="16dp"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:layout_width="match_parent"
        android:text="Our Engineers Specialize In:"/>

    <TextView
        android:paddingLeft="16dp"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text="@string/EngSpec"/>

</LinearLayout>
